--- a/index.html
+++ b/index.html
@@ -87,29 +87,31 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home</a>
                             <ul class="dropdown-menu">
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="index-2.html">Home 2</a></li>
                             </ul>
                         </li>
                         <li class="dropdown submenu">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">About Us</a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses</a>
                             <ul class="dropdown-menu other_dropdwn">
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="about-2.html">About Us-2</a></li>
+                                <li><a href="about.html">9th Grade</a></li>
+                                <li><a href="about.html">10th Grade</a></li>
+                                <li><a href="about.html">11th Grade</a></li>
+                                <li><a href="about.html">12th Grade</a></li>
                             </ul>
                         </li>
                         <li class="dropdown submenu">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services</a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Faculty</a>
                             <ul class="dropdown-menu other_dropdwn">
-                                <li><a href="services.html">Services</a></li>
-                                <li><a href="services-2.html">Services-2</a></li>
+                                <li><a href="services.html">Computer Science</a></li>
+                                <li><a href="services.html">Math</a></li>
+                                <li><a href="services.html">Science</a></li>
                             </ul>
                         </li>
                         <li><a href="#">Gallery</a></li>
                         <li class="dropdown submenu">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog</a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activities</a>
                             <ul class="dropdown-menu">
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="blog-2.html">Blog-2</a></li>
+                                <li><a href="blog.html">Programming</a></li>
+                                <li><a href="blog-2.html">Cybersecurity</a></li>
                             </ul>
                         </li>
                         <li><a href="contact.html">Contact</a></li>
