--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <li><a href="#">Gallery</a></li>
                         <li class="dropdown submenu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activities</a>
-                            <ul class="dropdown-menu">
+                            <ul class="dropdown-menu other_dropdwn">
                                 <li><a href="blog.html">Programming</a></li>
                                 <li><a href="blog-2.html">Cybersecurity</a></li>
                             </ul>
