--- a/index.html
+++ b/index.html
@@ -101,17 +101,22 @@
                         <li class="dropdown submenu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Faculty</a>
                             <ul class="dropdown-menu other_dropdwn">
-                                <li><a href="services.html">Computer Science</a></li>
-                                <li><a href="services.html">Math</a></li>
-                                <li><a href="services.html">Science</a></li>
+                                <li><a href="services.html">Mr.Chapin</a></li>
+                                <li><a href="services.html">Mr.Randall</a></li>
+                                <li><a href="services.html">Ms.Wissler</a></li>
+                                <li><a href="services.html">Mr.Poland</a></li>
+
                             </ul>
                         </li>
                         <li><a href="#">Gallery</a></li>
                         <li class="dropdown submenu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activities</a>
                             <ul class="dropdown-menu other_dropdwn">
-                                <li><a href="blog.html">Programming</a></li>
-                                <li><a href="blog-2.html">Cybersecurity</a></li>
+                                <li><a href="blog.html">Programming Competition Team</a></li>
+                                <li><a href="blog-2.html">Bioinformatics</a></li>
+                                <li><a href="blog-2.html">Computer Science Honor Society</a></li>
+                                <li><a href="blog-2.html">Bioinformatics</a></li>
+
                             </ul>
                         </li>
                         <li><a href="contact.html">Contact</a></li>
