added pictures of acl, added logo, changed description

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt=""></a>
+                    <a class="navbar-brand" href="index.html"><img src="images/ACLlogo.png" alt=""></a>
                 </div>
             </div>
 
@@ -115,8 +115,6 @@
                                 <li><a href="blog.html">Programming Competition Team</a></li>
                                 <li><a href="blog-2.html">Bioinformatics</a></li>
                                 <li><a href="blog-2.html">Computer Science Honor Society</a></li>
-                                <li><a href="blog-2.html">Bioinformatics</a></li>
-
                             </ul>
                         </li>
                         <li><a href="contact.html">Contact</a></li>
@@ -131,22 +129,22 @@
     <!-- Slider area -->
     <section class="slider_area row m0">
         <div class="slider_inner">
-            <div data-thumb="images/slider-1.jpg" data-src="images/slider-1.jpg">
+            <div data-thumb="images/ACLfront.jpg" data-src="images/ACLfront.jpg">
                 <div class="camera_caption">
                    <div class="container">
-                        <h5 class=" wow fadeInUp animated">Welcome to our</h5>
-                        <h3 class=" wow fadeInUp animated" data-wow-delay="0.5s">CLEAN, MODERN, MULTIPURPOSE THEME</h3>
-                        <p class=" wow fadeInUp animated" data-wow-delay="0.8s">Our team of professionals will help you turn your dream home or flat into a reality fast. The Love Boat promises something for everyone. Now the world don't move to the beat of just one</p>
-                        <a class=" wow fadeInUp animated" data-wow-delay="1s" href="#">Read More</a>
+                     <h5 class=" wow fadeInUp animated">Welcome to the</h5>
+                     <h3 class=" wow fadeInUp animated" data-wow-delay="0.5s">Academies of Loudoun: AET IT Pathway</h3>
+                     <p class=" wow fadeInUp animated" data-wow-delay="0.8s">The mission of the Academy of Engineering & Technology (AET) is to provide academic STEM (Science, Technology, Engineering and Mathematics) pathways for students to engage in</p>
+                     <a class=" wow fadeInUp animated" data-wow-delay="1s" href="#">Read More</a>
                    </div>
                 </div>
             </div>
-            <div data-thumb="images/slider-2.jpg" data-src="images/slider-2.jpg">
+            <div data-thumb="images/ACLback.jpg" data-src="images/ACLback.jpg">
                 <div class="camera_caption">
                    <div class="container">
-                        <h5 class=" wow fadeInUp animated">Welcome to our</h5>
-                        <h3 class=" wow fadeInUp animated" data-wow-delay="0.5s">CLEAN ,MODERN, MULTIPURPOSE THEME</h3>
-                        <p class=" wow fadeInUp animated" data-wow-delay="0.8s">Our team of professionals will help you turn your dream home or flat into a reality fast. The Love Boat promises something for everyone. Now the world don't move to the beat of just one</p>
+                        <h5 class=" wow fadeInUp animated">Welcome to the</h5>
+                        <h3 class=" wow fadeInUp animated" data-wow-delay="0.5s">Academies of Loudoun: AET IT Pathway</h3>
+                        <p class=" wow fadeInUp animated" data-wow-delay="0.8s">The mission of the Academy of Engineering & Technology (AET) is to provide academic STEM (Science, Technology, Engineering and Mathematics) pathways for students to engage in</p>
                         <a class=" wow fadeInUp animated" data-wow-delay="1s" href="#">Read More</a>
                    </div>
                 </div>
