--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
 	<section class="top_header_area">
 	    <div class="container">
             <ul class="nav navbar-nav top_nav">
-                <li><a href="#"><i class="fa fa-phone"></i>+1 (168) 314 5016</a></li>
-                <li><a href="#"><i class="fa fa-envelope-o"></i>info@thethemspro.com</a></li>
-                <li><a href="#"><i class="fa fa-clock-o"></i>Mon - Sat 12:00 - 20:00</a></li>
+                <li><a href="#"><i class="fa fa-phone"></i>571-252-1980</a></li>
+                <li><a href="#"><i class="fa fa-clock-o"></i>School Hours: Mon - Fri 9:15-3:15</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right social_nav">
                 <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
