--- a/index.html
+++ b/index.html
@@ -41,12 +41,7 @@
                 <li><a href="#"><i class="fa fa-clock-o"></i>School Hours: Mon - Fri 9:15-3:15</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right social_nav">
-                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                <li><a href="https://twitter.com/LCPS_Academies?ref_src=twsrc%5Etfw%7Ctwcamp%5Eembeddedtimeline%7Ctwterm%5Eprofile%3ALCPS_Academies&ref_url=https%3A%2F%2Fwww.lcps.org%2FPage%2F154616"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
             </ul>
 	    </div>
 	</section>
