removes professional builde

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <!-- End Slider area -->
 
     <!-- Professional Builde -->
-    <section class="professional_builder row">
+    <!-- <section class="professional_builder row">
         <div class="container">
            <div class="row builder_all">
                 <div class="col-md-3 col-sm-6 builder">
@@ -173,7 +173,7 @@
                 </div>
            </div>
         </div>
-    </section>
+    </section> -->
     <!-- End Professional Builde -->
 
     <!-- About Us Area -->
