Removal of unneeded sections

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <!-- End What ew offer Area -->
 
     <!-- Our Features Area -->
-    <section class="our_feature_area">
+    <!-- <section class="our_feature_area">
         <div class="container">
             <div class="tittle wow fadeInUp">
                 <h2>Our Features</h2>
@@ -294,11 +294,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End Our Features Area -->
 
     <!-- Our Services Area -->
-    <section class="our_services_area">
+    <!-- <section class="our_services_area">
         <div class="container">
             <div class="tittle wow fadeInUp">
                 <h2>Our Services</h2>
@@ -392,11 +392,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End Our Services Area -->
 
     <!-- Our Team Area -->
-    <section class="our_team_area">
+    <!-- <section class="our_team_area">
         <div class="container">
             <div class="tittle wow fadeInUp">
                 <h2>Our Team</h2>
@@ -461,7 +461,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End Our Team Area -->
 
     <!-- Our Achievments Area -->
@@ -498,7 +498,7 @@
     <!-- End Our Achievments Area -->
 
     <!-- Our Testimonial Area -->
-    <section class="testimonial_area row">
+    <!-- <section class="testimonial_area row">
         <div class="container">
             <div class="tittle wow fadeInUp">
                 <h2>Our TESTIMONIALS</h2>
@@ -591,7 +591,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End Our testimonial Area -->
 
     <!-- Our Featured Works Area -->
@@ -693,7 +693,7 @@
     <!-- End Our Latest Blog Area -->
 
     <!-- Our Partners Area -->
-    <section class="our_partners_area">
+    <!-- <section class="our_partners_area">
         <div class="container">
             <div class="tittle wow fadeInUp">
                 <h2>Our Partners</h2>
@@ -720,7 +720,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End Our Partners Area -->
 
     <!-- Footer Area -->
