--- a/index.html
+++ b/index.html
@@ -128,18 +128,20 @@
                    <div class="container">
                      <h5 class=" wow fadeInUp animated">Welcome to the</h5>
                      <h3 class=" wow fadeInUp animated" data-wow-delay="0.5s">Academies of Loudoun: AET IT Pathway</h3>
-                     <p class=" wow fadeInUp animated" data-wow-delay="0.8s">The mission of the Academy of Engineering & Technology (AET) is to provide academic STEM (Science, Technology, Engineering and Mathematics) pathways for students to engage in</p>
-                     <a class=" wow fadeInUp animated" data-wow-delay="1s" href="#">Read More</a>
+                     <img src="images/ACLjustlogo.png" alt="" class=" wow fadeInUp animated" data-wow-delay="0.65s" id="ACLhomelogo">
+                     <h2 class=" wow fadeInUp animated" data-wow-delay="0.95s" id="mottotext">Explore | Research | Innovate | Collaborate</h2>
+                     <a class=" wow fadeInUp animated" data-wow-delay="1.1s" href="#">Read More</a>
                    </div>
                 </div>
             </div>
             <div data-thumb="images/ACLback.jpg" data-src="images/ACLback.jpg">
                 <div class="camera_caption">
                    <div class="container">
-                        <h5 class=" wow fadeInUp animated">Welcome to the</h5>
-                        <h3 class=" wow fadeInUp animated" data-wow-delay="0.5s">Academies of Loudoun: AET IT Pathway</h3>
-                        <p class=" wow fadeInUp animated" data-wow-delay="0.8s">The mission of the Academy of Engineering & Technology (AET) is to provide academic STEM (Science, Technology, Engineering and Mathematics) pathways for students to engage in</p>
-                        <a class=" wow fadeInUp animated" data-wow-delay="1s" href="#">Read More</a>
+                     <h5 class=" wow fadeInUp animated">Welcome to the</h5>
+                     <h3 class=" wow fadeInUp animated" data-wow-delay="0.5s">Academies of Loudoun: AET IT Pathway</h3>
+                     <img src="images/ACLjustlogo.png" alt="" class=" wow fadeInUp animated" data-wow-delay="0.65s" id="ACLhomelogo">
+                     <p class=" wow fadeInUp animated" data-wow-delay="0.95s">The mission of the Academy of Engineering & Technology (AET) is to provide academic STEM (Science, Technology, Engineering and Mathematics) pathways for students to engage in</p>
+                     <a class=" wow fadeInUp animated" data-wow-delay="1.1s" href="#">Read More</a>
                    </div>
                 </div>
             </div>
