--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                      <h5 class=" wow fadeInUp animated">Welcome to the</h5>
                      <h3 class=" wow fadeInUp animated" data-wow-delay="0.5s">Academies of Loudoun: AET IT Pathway</h3>
                      <img src="images/ACLjustlogo.png" alt="" class=" wow fadeInUp animated" data-wow-delay="0.65s" id="ACLhomelogo">
-                     <p class=" wow fadeInUp animated" data-wow-delay="0.95s">The mission of the Academy of Engineering & Technology (AET) is to provide academic STEM (Science, Technology, Engineering and Mathematics) pathways for students to engage in</p>
+                     <h2 class=" wow fadeInUp animated" data-wow-delay="0.95s" id="mottotext">Explore | Research | Innovate | Collaborate</h2>
                      <a class=" wow fadeInUp animated" data-wow-delay="1.1s" href="#">Read More</a>
                    </div>
                 </div>
