--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                      <h3 class=" wow fadeInUp animated" data-wow-delay="0.5s">Academies of Loudoun: AET IT Pathway</h3>
                      <img src="images/ACLjustlogo.png" alt="" class=" wow fadeInUp animated" data-wow-delay="0.65s" id="ACLhomelogo">
                      <h2 class=" wow fadeInUp animated" data-wow-delay="0.95s" id="mottotext">Explore | Research | Innovate | Collaborate</h2>
-                     <a class=" wow fadeInUp animated" data-wow-delay="1.1s" href="#">Read More</a>
+                     <!-- <a class=" wow fadeInUp animated" data-wow-delay="1.1s" href="#">Read More</a> -->
                    </div>
                 </div>
             </div>
@@ -141,7 +141,7 @@
                      <h3 class=" wow fadeInUp animated" data-wow-delay="0.5s">Academies of Loudoun: AET IT Pathway</h3>
                      <img src="images/ACLjustlogo.png" alt="" class=" wow fadeInUp animated" data-wow-delay="0.65s" id="ACLhomelogo">
                      <h2 class=" wow fadeInUp animated" data-wow-delay="0.95s" id="mottotext">Explore | Research | Innovate | Collaborate</h2>
-                     <a class=" wow fadeInUp animated" data-wow-delay="1.1s" href="#">Read More</a>
+                     <!--<a class=" wow fadeInUp animated" data-wow-delay="1.1s" href="#">Read More</a>-->
                    </div>
                 </div>
             </div>
