--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/ACLlogo.png" alt=""></a>
+                    <a class="navbar-brand" href="index.html" id="acllogocenter"><img src="images/newacllogo.png" alt=""></a>
                 </div>
             </div>
 
