linked courses in navbar to the courses webpage, renamed services to courses

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <li class="dropdown submenu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses</a>
                             <ul class="dropdown-menu other_dropdwn">
-                                <li><a href="services.html">Courses</a></li>
+                                <li><a href="courses.html">Courses</a></li>
                                 <!-- <li><a href="about.html">10th Grade</a></li>
                                 <li><a href="about.html">11th Grade</a></li>
                                 <li><a href="about.html">12th Grade</a></li> -->
@@ -140,7 +140,7 @@
                      <h5 class=" wow fadeInUp animated">Welcome to the</h5>
                      <h3 class=" wow fadeInUp animated" data-wow-delay="0.5s">Academies of Loudoun: AET IT Pathway</h3>
                      <img src="images/ACLjustlogo.png" alt="" class=" wow fadeInUp animated" data-wow-delay="0.65s" id="ACLhomelogo">
-                     <h2 class=" wow fadeInUp animated" data-wow-delay="0.95s" id="mottotext">Explore | Research | Innovate | Collaborate</h3>
+                     <h3 class=" wow fadeInUp animated" data-wow-delay="0.95s" id="mottotext">Explore | Research | Innovate | Collaborate</h3>
                      <!--<a class=" wow fadeInUp animated" data-wow-delay="1.1s" href="#">Read More</a>-->
                    </div>
                 </div>
