edited faculty page (about.html)

--- a/about.html
+++ b/about.html
@@ -241,11 +241,11 @@
     <!-- End Our Partners Area -->
 
 
-    <!-- Our Team Area -->
+    <!-- Our Faculty Area -->
     <section class="our_team_area">
         <div class="container">
             <div class="tittle wow fadeInUp">
-                <h2>Our Team</h2>
+                <h2>Our Faculty</h2>
                 <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry</h4>
             </div>
             <div class="row team_row">
@@ -258,7 +258,7 @@
                                 <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                             </ul>
-                            <a href="#" class="name">Prodip Ghosh</a>
+                            <a href="#" class="name">John Chapin</a>
                             <h6>Founder &amp; CEO</h6>
                         </div>
                    </div>
@@ -272,7 +272,7 @@
                                 <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                             </ul>
-                            <a href="#" class="name">Emran Khan</a>
+                            <a href="#" class="name">Peter Randall</a>
                             <h6>Web-Developer</h6>
                         </div>
                    </div>
@@ -286,7 +286,7 @@
                                 <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                             </ul>
-                            <a href="#" class="name">Prodip Ghosh</a>
+                            <a href="#" class="name">Erin Wissler</a>
                             <h6>Founder &amp; CEO</h6>
                         </div>
                    </div>
@@ -300,7 +300,7 @@
                                 <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                             </ul>
-                            <a href="#" class="name">Jakaria Khan</a>
+                            <a href="#" class="name">Doug Poland</a>
                             <h6>Founder &amp; CEO</h6>
                         </div>
                    </div>
