navbar for courses.html

--- a/courses.html
+++ b/courses.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Topbuilder Construction Template</title>
+    <title>AET IT Courses</title>
 
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.png" type="image/x-icon" />
@@ -42,12 +42,7 @@
                 <li><a href="#"><i class="fa fa-clock-o"></i>School Hours: Mon - Fri 9:15-3:15</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right social_nav">
-                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                <li><a href="https://twitter.com/LCPS_Academies?ref_src=twsrc%5Etfw%7Ctwcamp%5Eembeddedtimeline%7Ctwterm%5Eprofile%3ALCPS_Academies&ref_url=https%3A%2F%2Fwww.lcps.org%2FPage%2F154616"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
             </ul>
 	    </div>
 	</section>
@@ -75,7 +70,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt=""></a>
+                    <a class="navbar-brand" href="index.html" id="acllogocenter"><img src="images/newacllogo.png" alt=""></a>
                 </div>
             </div>
 
@@ -87,29 +82,25 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home</a>
                             <ul class="dropdown-menu">
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="index-2.html">Home 2</a></li>
                             </ul>
                         </li>
                         <li class="dropdown submenu">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">About Us</a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses</a>
                             <ul class="dropdown-menu other_dropdwn">
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="about-2.html">About Us-2</a></li>
+                                <li><a href="courses.html">Courses</a></li>
                             </ul>
                         </li>
                         <li class="dropdown submenu">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services</a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Faculty</a>
                             <ul class="dropdown-menu other_dropdwn">
-                                <li><a href="services.html">Services</a></li>
-                                <li><a href="services-2.html">Services-2</a></li>
+                                <li><a href="services.html">Faculty</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Gallery</a></li>
+                        <!-- <li><a href="#">Gallery</a></li> -->
                         <li class="dropdown submenu">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog</a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activities</a>
                             <ul class="dropdown-menu">
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="blog-2.html">Blog-2</a></li>
+                                <li><a href="blog.html">Activities</a></li>
                             </ul>
                         </li>
                         <li><a href="contact.html">Contact</a></li>
@@ -123,10 +114,10 @@
 
     <!-- Banner area -->
     <section class="banner_area" data-stellar-background-ratio="0.5">
-        <h2>Our Services</h2>
+        <h2>Courses</h2>
         <ol class="breadcrumb">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#" class="active">Services</a></li>
+            <li><a href="#" class="active">Courses</a></li>
         </ol>
     </section>
     <!-- End Banner area -->
