--- a/courses.html
+++ b/courses.html
@@ -128,10 +128,10 @@
             <div class="architecture_area services_pages">
                 <div class="portfolio_filter portfolio_filter_2">
                     <ul>
-                        <li data-filter="*" class="active"><a href=""><i class="fa fa-wrench" aria-hidden="true"></i>ARCHITECTURE</a></li>
-                        <li data-filter=".building"><a href=""><i class="fa fa-cogs" aria-hidden="true"></i>Building</a></li>
-                        <li data-filter=".webdesign"><a href=""><i class="fa fa-cog" aria-hidden="true"></i>CONSTRUCTION</a></li>
-                        <li data-filter=".adversting"><a href=""><i class="fa fa-heart" aria-hidden="true"></i>DESIGN</a></li>
+                        <li data-filter="*" class="active"><a href=""><i class="fa fa-wrench" aria-hidden="true"></i>Freshman</a></li>
+                        <li data-filter=".building"><a href=""><i class="fa fa-cogs" aria-hidden="true"></i>Sophomore</a></li>
+                        <li data-filter=".webdesign"><a href=""><i class="fa fa-cog" aria-hidden="true"></i>Junior</a></li>
+                        <li data-filter=".adversting"><a href=""><i class="fa fa-heart" aria-hidden="true"></i>Senior</a></li>
                         <li data-filter=".painting"><a href=""><i class="fa fa-paint-brush" aria-hidden="true"></i>Painting</a></li>
                     </ul>
                 </div>
@@ -157,7 +157,7 @@
     <!-- End Our Services Area -->
 
     <!-- Our Featured Works Area -->
-    <section class="featured_works row" data-stellar-background-ratio="0.3">
+    <!-- <section class="featured_works row" data-stellar-background-ratio="0.3">
         <div class="tittle wow fadeInUp">
             <h2>Our Featured Works</h2>
             <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry</h4>
@@ -220,11 +220,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End Our Featured Works Area -->
 
     <!-- Our Team Area -->
-    <section class="our_team_area">
+    <!-- <section class="our_team_area">
         <div class="container">
             <div class="tittle wow fadeInUp">
                 <h2>Our Team</h2>
@@ -289,7 +289,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End Our Team Area -->
 
     <!-- Footer Area -->
