--- a/courses.html
+++ b/courses.html
@@ -128,11 +128,11 @@
             <div class="architecture_area services_pages">
                 <div class="portfolio_filter portfolio_filter_2">
                     <ul>
-                        <li data-filter="*" class="active"><a href=""><i class="fa fa-wrench" aria-hidden="true"></i>Freshman</a></li>
-                        <li data-filter=".building"><a href=""><i class="fa fa-cogs" aria-hidden="true"></i>Sophomore</a></li>
-                        <li data-filter=".webdesign"><a href=""><i class="fa fa-cog" aria-hidden="true"></i>Junior</a></li>
-                        <li data-filter=".adversting"><a href=""><i class="fa fa-heart" aria-hidden="true"></i>Senior</a></li>
-                        <li data-filter=".painting"><a href=""><i class="fa fa-paint-brush" aria-hidden="true"></i>Painting</a></li>
+                        <li data-filter="*" class="active"><a href=""></i>Freshman</a></li>
+                        <li data-filter=".building"><a href=""></i>Sophomore</a></li>
+                        <li data-filter=".webdesign"><a href=""></i>Junior</a></li>
+                        <li data-filter=".adversting"><a href=""></i>Senior</a></li>
+                        <li data-filter=".painting"><a href=""></i>Entrepreneurship</a></li>
                     </ul>
                 </div>
                 <div class="portfolio_item portfolio_2">
