--- a/courses.html
+++ b/courses.html
@@ -93,7 +93,7 @@
                         <li class="dropdown submenu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Faculty</a>
                             <ul class="dropdown-menu other_dropdwn">
-                                <li><a href="services.html">Faculty</a></li>
+                                <li><a href="about.html">Faculty</a></li>
                             </ul>
                         </li>
                         <!-- <li><a href="#">Gallery</a></li> -->
