--- a/courses.html
+++ b/courses.html
@@ -99,7 +99,7 @@
                         <!-- <li><a href="#">Gallery</a></li> -->
                         <li class="dropdown submenu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activities</a>
-                            <ul class="dropdown-menu">
+                            <ul class="dropdown-menu other_dropdwn">
                                 <li><a href="blog.html">Activities</a></li>
                             </ul>
                         </li>
