changed courses, achievements

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="container">
            <div class="row builder_all">
                 <div class="col-md-3 col-sm-6 builder">
-                    <i class="fa fa-home" aria-hidden="true"></i>
+                    <i class="fa <f></f>a-home" aria-hidden="true"></i>
                     <h4>Professional Builde</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod </p>
                 </div>
@@ -205,8 +205,8 @@
     <section class="what_we_area row">
         <div class="container">
             <div class="tittle wow fadeInUp">
-                <h2>WHAT WE OFFER</h2>
-                <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry</h4>
+                <h2>WHAT COURSES WE OFFER</h2>
+                <h4>AET:IT offers specialized classes offered nowhere else in Loudoun County</h4>
             </div>
             <div class="row construction_iner">
                 <div class="col-md-4 col-sm-6 construction">
@@ -215,7 +215,7 @@
                    </div>
                    <div class="cns-content">
                         <i class="fa fa-home" aria-hidden="true"></i>
-                        <a href="#">BUILDING CONSTRUCTION</a>
+                        <a href="#">AI/Machine Learning</a>
                         <p>Lorem Ipsum is simply dummy text of the print-ing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
                    </div>
                 </div>
@@ -225,7 +225,7 @@
                    </div>
                    <div class="cns-content">
                         <i class="fa fa-keyboard-o" aria-hidden="true"></i>
-                        <a href="#">PROJECT PLANNING</a>
+                        <a href="#">Web/Mobile App Development</a>
                         <p>Lorem Ipsum is simply dummy text of the print-ing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
                    </div>
                 </div>
@@ -235,7 +235,7 @@
                    </div>
                    <div class="cns-content">
                         <i class="fa fa-gavel" aria-hidden="true"></i>
-                        <a href="#">HOUSE RENOVATION</a>
+                        <a href="#">CS Senior Research</a>
                         <p>Lorem Ipsum is simply dummy text of the print-ing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
                    </div>
                 </div>
@@ -470,28 +470,28 @@
     <section class="our_achievments_area" data-stellar-background-ratio="0.3">
         <div class="container">
             <div class="tittle wow fadeInUp">
-                <h2>Our Achievments</h2>
-                <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry</h4>
+                <h2>Our Achievements</h2>
+                <h4>The curriculum of the IT pathway is making strides in how computer science will be taught in schools</h4>
             </div>
             <div class="achievments_row row">
                 <div class="col-md-3 col-sm-6 p0 completed">
                     <i class="fa fa-connectdevelop" aria-hidden="true"></i>
-                    <span class="counter">800</span>
-                    <h6>PROJECT COMPLETED</h6>
+                    <span class="counter">1</span>
+                    <h6>PATHWAY</h6>
                 </div>
                 <div class="col-md-3 col-sm-6 p0 completed">
                     <i class="fa fa-home" aria-hidden="true"></i>
-                    <span class="counter">230</span>
-                    <h6>HOUSE RENOVATIONS</h6>
+                    <span class="counter">48</span>
+                    <h6>INTEGRATED PROJECTS</h6>
                 </div>
                 <div class="col-md-3 col-sm-6 p0 completed">
                     <i class="fa fa-child" aria-hidden="true"></i>
-                    <span class="counter">1390</span>
-                    <h6>WORKERS EMPLOYED</h6>
+                    <span class="counter">450</span>
+                    <h6>STUDENTS</h6>
                 </div>
                 <div class="col-md-3 col-sm-6 p0 completed">
                     <i class="fa fa-trophy" aria-hidden="true"></i>
-                    <span class="counter">125</span>
+                    <span class="counter">96</span>
                     <h6>AWARDS WON</h6>
                 </div>
             </div>
