--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
     <!-- End Our Services Area -->
 
     <!-- Our Team Area -->
-    <!-- <section class="our_team_area">
+    <section class="our_team_area">
         <div class="container">
             <div class="tittle wow fadeInUp">
                 <h2>Our Team</h2>
@@ -463,7 +463,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- End Our Team Area -->
 
     <!-- Our Achievments Area -->
