changed course photos

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <div class="row construction_iner">
                 <div class="col-md-4 col-sm-6 construction">
                    <div class="cns-img">
-                        <img src="images/cns-1.jpg" alt="">
+                        <img src="images/AIML.jpg" alt="">
                    </div>
                    <div class="cns-content">
                         <i class="fa fa-home" aria-hidden="true"></i>
@@ -221,7 +221,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6 construction">
                    <div class="cns-img">
-                        <img src="images/cns-2.jpg" alt="">
+                        <img src="images/mobiledevelopment.png" alt="">
                    </div>
                    <div class="cns-content">
                         <i class="fa fa-keyboard-o" aria-hidden="true"></i>
@@ -231,7 +231,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6 construction">
                    <div class="cns-img">
-                        <img src="images/cns-3.jpg" alt="">
+                        <img src="images/seniorresearch.jpg" alt="">
                    </div>
                    <div class="cns-content">
                         <i class="fa fa-gavel" aria-hidden="true"></i>
